syntax = "proto3";
package message;

// 订单请求参数
message OrderRequst{
    string OrderId = 1;
    int64 Timestamp = 2;

}

// 订单信息
message OrderInfo{
    string OrderId = 1;
    string OrderName = 2;
    string OrderStatus = 3;
}

// 订单服务service定义
service OrderService{
    rpc GetOrderInfo(OrderRequst) returns (OrderInfo);
}